--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,22 +5,17 @@ version = "0.0.1"
 keywords = ["incremental", "parsing", "hcl"]
 categories = ["parsing", "text-editors"]
 repository = "https://github.com/MichaHoffmann/tree-sitter-hcl"
-edition = "2018"
+edition = "2024"
 license = "Apache"
 
 build = "bindings/rust/build.rs"
-include = [
-  "bindings/rust/*",
-  "grammar.js",
-  "queries/*",
-  "src/*",
-]
+include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]
 
 [lib]
 path = "bindings/rust/lib.rs"
 
 [dependencies]
-tree-sitter = "~0.20"
+tree-sitter-language = "0.1.0"
 
 [build-dependencies]
-cc = "1.0"
+cc = "1.1"
