--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "version": "0.2.0-snapshot",
   "description": "",
   "main": "bindings/node",
+  "types": "bindings/node",
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nan": "^2.14.2",
-    "tree-sitter-cli": "^0.20.6"
+    "tree-sitter-cli": "^0.20.6",
+    "node-addon-api": "^8.0.0",
+    "node-gyp-build": "^4.8.1"
+  },
+  "peerDependencies": {
+    "tree-sitter": "^0.21.1"
+  },
+  "peerDependenciesMeta": {
+    "tree_sitter": {
+      "optional": true
+    }
   },
   "tree-sitter": [
     {
@@ -18,5 +28,23 @@
         "tfvars"
       ]
     }
+  ],
+  "devDependencies": {
+    "prebuildify": "^6.0.1"
+  },
+  "scripts": {
+    "install": "node-gyp-build",
+    "prestart": "tree-sitter build --wasm",
+    "start": "tree-sitter playground",
+    "test": "node --test bindings/node/*_test.js"
+  },
+  "files": [
+    "grammar.js",
+    "binding.gyp",
+    "prebuilds/**",
+    "bindings/node/*",
+    "queries/*",
+    "src/**",
+    "*.wasm"
   ]
 }
