--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,10 @@ include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]
 path = "bindings/rust/lib.rs"
 
 [dependencies]
-tree-sitter = "0.23"
 tree-sitter-language = "0.1"
 
 [build-dependencies]
 cc = "1.2"
+
+[dev-dependencies]
+tree-sitter = "0.24"
